# CudaSift

./: CMakeLists.txt  calling_seq.txt  cudaImage.cu
app/: mainSift.cpp
cmake/: RemoveOption.cmake
include/cudasift/: cudaImage.h  cudaSift.h  cudaSiftD.h  cudaSiftException.h  cudaSiftH.h  cudautils.h  geomFuncs.h
src/: cudaImage.cpp  cudaImage.cu  cudaSiftD.cu  cudaSiftException.cpp  cudaSiftH.cpp  cudaSiftH.cu  geomFuncs.cpp  match.cu  matching.cu  siftDeviceResidents.cu  siftDeviceResidents.cuh
